--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/50888173ca.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>Passenger - Before Iceberg</title>
   </head>
   <body>
     <div id="root"></div>
